--- a/projectsite/tracker/templates/tracker/base.html
+++ b/projectsite/tracker/templates/tracker/base.html
@@ -342,9 +342,9 @@
                                 <i class="bi bi-person-circle"></i> {{ user.email|truncatewords:1 }}
                             </a>
                             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#"><i class="bi bi-person"></i> Profile</a></li>
-                                <li><a class="dropdown-item" href="#"><i class="bi bi-gear"></i> Settings</a></li>
-                                <li><hr class="dropdown-divider"></li>
+                        <li><a class="dropdown-item" href="{% url 'tracker:profile' %}"><i class="bi bi-person"></i> Profile</a></li>
+                        <li><a class="dropdown-item" href="{% url 'tracker:settings' %}"><i class="bi bi-gear"></i> Settings</a></li>
+                                                        <li><hr class="dropdown-divider"></li>
                                 <li><a class="dropdown-item" href="{% url 'account_logout' %}"><i class="bi bi-box-arrow-right"></i> Logout</a></li>
                             </ul>
                         </li>
